compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__attribute_javascript.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 159
expression: "\n@external(javascript, \"./one.mjs\", \"one\")\npub fn one(x: Int) -> Int {\n  todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "./one.mjs", "one")
pub fn one(x: Int) -> Int {
  todo
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([one/1]).

-file("project/test/my/mod.gleam", 3).
-spec one(integer()) -> integer().
one(X) ->
    erlang:error(#{gleam_error => todo,
            message => <<"`todo` expression evaluated. This code has not yet been implemented."/utf8>>,
            file => <<?FILEPATH/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"one"/utf8>>,
            line => 4}).
