compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__discarded_arg_in_external_are_passed_correctly.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 396
expression: "\n@external(erlang, \"wibble\", \"wobble\")\npub fn woo(_a: a) -> Nil\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "wibble", "wobble")
pub fn woo(_a: a) -> Nil


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([woo/1]).

-file("project/test/my/mod.gleam", 3).
-spec woo(any()) -> nil.
woo(_a) ->
    wibble:wobble(_a).
