compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__elixir.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 289
expression: "\npub fn main() {\n  #(do, do())\n}\n\n@external(erlang, \"Elixir.String\", \"main\")\nfn do() -> Int\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  #(do, do())
}

@external(erlang, "Elixir.String", "main")
fn do() -> Int


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> {fun(() -> integer()), integer()}.
main() ->
    {fun 'Elixir.String':main/0, 'Elixir.String':main()}.
