compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__hole_parameter_erlang.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 208
expression: "\n@external(erlang, \"one\", \"one\")\npub fn one(x: List(_)) -> Int {\n  todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "one", "one")
pub fn one(x: List(_)) -> Int {
  todo
}


----- ERROR
error: Unexpected type hole
  ┌─ /src/one/two.gleam:3:20
  │
3 │ pub fn one(x: List(_)) -> Int {
  │                    ^ I need to know what this is

We need to know the exact type here so type holes cannot be used.
