compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__integration_test1_3.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 5
expression: "\n@external(erlang, \"Elixir.MyApp\", \"run\")\npub fn run() -> Int\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "Elixir.MyApp", "run")
pub fn run() -> Int


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([run/0]).

-file("project/test/my/mod.gleam", 3).
-spec run() -> integer().
run() ->
    'Elixir.MyApp':run().
