compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__integration_test7.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 15
expression: "\n@external(erlang, \"try\", \"and\")\npub fn receive() -> Int\npub fn catch(x) { receive() }\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "try", "and")
pub fn receive() -> Int
pub fn catch(x) { receive() }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export(['receive'/0, 'catch'/1]).

-file("project/test/my/mod.gleam", 3).
-spec 'receive'() -> integer().
'receive'() ->
    'try':'and'().

-file("project/test/my/mod.gleam", 4).
-spec 'catch'(any()) -> integer().
'catch'(X) ->
    'try':'and'().
