compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__javascript_only.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 313
expression: "\npub fn should_be_generated(x: Int) -> Int {\n  x\n}\n\n@external(javascript, \"one\", \"one\")\npub fn should_not_be_generated(x: Int) -> Int\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn should_be_generated(x: Int) -> Int {
  x
}

@external(javascript, "one", "one")
pub fn should_not_be_generated(x: Int) -> Int


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([should_be_generated/1]).

-file("project/test/my/mod.gleam", 2).
-spec should_be_generated(integer()) -> integer().
should_be_generated(X) ->
    X.
